[package]
name = "ggez-no-re"
version = "0.1.0"
edition = "2024"

[dependencies]
ggez = { git = "https://github.com/Maurdekye/ggez.git", branch = "devel" }
bincode = "1.3.3"
log = "0.4.25"
serde = "1.0.217"
clap = { version = "4.5.29", features = ["cargo"] }
chrono = "0.4.39"
serde_json = "1.0.138"
clipboard-rs = "0.2.4"
