[package]
name = "ggez-no-re"
version = "1.0.0"
edition = "2024"

[features]
const_logger = []

[dependencies]
ggez = { git = "https://github.com/Maurdekye/ggez.git", branch = "devel" }
bincode = "1.3.3"
log = "0.4.25"
serde = "1.0.217"
clap = { version = "4.5.29", features = ["cargo"] }
chrono = "0.4.39"
serde_json = "1.0.138"
clipboard-rs = "0.2.4"
crevice = "0.17.0"
csv = "1.3.1"
discord-sdk = "0.4.0"
tokio = "1.43.0"
